header html added

--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,27 @@
   <title>HTML Academy: Cat Energe</title>
 </head>
 <body>
-  <p>Репозиторий создан</p>
+  <header class="page-header">
+    <a href="#" class="page-header__logo">
+      <img src="http://placehold.it/150x100" alt="cat" class="page-header__logo-image">
+    </a>
+    <p class="page-header__title">cat energy</p>
+    <nav class="main-nav">
+      <button class="main-nav__toggle-button" type="button">Меню</button>
+      <ul class="main-nav__list visually-hidden">
+        <li class="main-nav__list-item">главная</li>
+        <li class="main-nav__list-item">каталог продукции</li>
+        <li class="main-nav__list-item">подбор программы</li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-main">
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
+  <footer></footer>
 </body>
 </html>
