some html added

--- a/source/index.html
+++ b/source/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Academy: Cat Energe</title>
+  <title>HTML Academy: Cat Energy</title>
 </head>
 <body>
   <header class="page-header">
     <a href="#" class="page-header__logo">
       <img src="http://placehold.it/150x100" alt="cat" class="page-header__logo-image">
     </a>
-    <p class="page-header__title">cat energy</p>
+    <p class="page-header__title"><span class="page-header__bold">cat</span>energy</p>
     <nav class="main-nav">
       <button class="main-nav__toggle-button" type="button">Меню</button>
       <ul class="main-nav__list visually-hidden">
@@ -21,8 +21,24 @@
     </nav>
   </header>
   <main class="page-main">
-    <section></section>
-    <section></section>
+    <section class="main-offer">
+      <div class="offer-description">
+        <h1 class="offer-description__title">Функциональное питание для котов</h1>
+        <p class="offer-descriptio__slogan">занялся собой? займись котом!</p>
+        <button class="offer-description__button">подобрать программу</button>
+      </div>
+      <div class="offer-image">
+        <img src="http://placehold.it/150x100" alt="cat-photo" class="offer-image__background">
+      </div>
+    </section>
+    <section class="services">
+      <article class="service-article">
+        <h2 class="service-article__title">похудение</h2>
+      </article>
+      <article class="service-article">
+        <h2 class="service-article__title">набор массы</h2>
+      </article>
+    </section>
     <section></section>
     <section></section>
     <section></section>
