--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
       </nav>
     </div>
   </header>
-  <main class="page-main">
+  <main">
     <section class="main-offer">
       <div class="offer-description">
         <h1 class="offer-description__title">Функциональное питание для котов</h1>
