--- a/source/index.html
+++ b/source/index.html
@@ -34,25 +34,42 @@
     </div>
   </header>
   <main">
-    <section class="main-offer">
-      <div class="offer-description">
-        <h1 class="offer-description__title">Функциональное питание для котов</h1>
-        <p class="offer-descriptio__slogan">занялся собой? займись котом!</p>
-        <button class="offer-description__button">подобрать программу</button>
-      </div>
-      <div class="offer-image">
-        <img src="http://placehold.it/150x100" alt="cat-photo" class="offer-image__background">
+    <section class="offer">
+      <div class="offer__wrapper">
+        <h1 class="offer__title">Функциональное питание для котов</h1>
+        <p class="offer__slogan">занялся собой? займись котом!</p>
+        <picture class="offer__image-cotainer">
+          <source media="(min-width: )" srcset="">
+          <source media="(min-width: )" srcset="">
+          <img src="http://placehold.it/150x100" alt="фото товара" class="offer__image">
+        </picture>
+        <button class="button offer__button" type="button">подобрать программу</button>
       </div>
     </section>
-    <section class="services">
-      <article class="service-article">
-        <h2 class="service-article__title">похудение</h2>
-      </article>
-      <article class="service-article">
-        <h2 class="service-article__title">набор массы</h2>
-      </article>
+    <section class="catalogues">
+      <div class="catalogues__wrapper">
+        <h2 class="visually-hidden">Наши каталоги - системы питания для котов</h2>
+        <article class="catalogue catalogues__slimming">
+          <h3 class="catalogue__title">похудение</h3>
+          <p class="catalogue__description">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a href="#" class="catalogue__link">каталог slim</a>
+        </article>
+        <article class="catalogue catalogues__pro">
+          <h3 class="catalogue__title">похудение</h3>
+          <p class="catalogue__description">
+            Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a href="#" class="catalogue__link">каталог slim</a>
+        </article>
+      </div>
     </section>
-    <section></section>
+    <section>
+
+    </section>
     <section></section>
     <section></section>
   </main>
