--- a/source/index.html
+++ b/source/index.html
@@ -21,13 +21,13 @@
         </button>
         <ul class="navigation__list">
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link navigation__link--active">главная</a>
+            <a href="#" class="navigation__link navigation__link--active">Главная</a>
           </li>
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link">каталог продукции</a>
+            <a href="#" class="navigation__link">Каталог продукции</a>
           </li>
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link">подбор программы</a>
+            <a href="#" class="navigation__link">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -37,13 +37,13 @@
     <section class="offer">
       <div class="offer__wrapper">
         <h1 class="offer__title">Функциональное питание для котов</h1>
-        <p class="offer__slogan">занялся собой? займись котом!</p>
+        <p class="offer__slogan">Занялся собой? Займись котом!</p>
         <picture class="offer__image-cotainer">
           <source media="(min-width: )" srcset="">
           <source media="(min-width: )" srcset="">
           <img src="http://placehold.it/150x100" alt="фото товара" class="offer__image">
         </picture>
-        <button class="button offer__button" type="button">подобрать программу</button>
+        <button class="button offer__button" type="button">Подобрать программу</button>
       </div>
     </section>
     <section class="catalogues">
@@ -67,10 +67,54 @@
         </article>
       </div>
     </section>
-    <section>
-
+    <section class="conception">
+      <div class="conception__wrapper">
+        <h2 class="conception__title">Как это работает</h2>
+        <ol class="conception__list">
+          <li class="conception__item conception__item--eco">Функциональное питание содержит только полезные питательные вещества.</li>
+          <li class="conception__item conception__item--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+          <li class="conception__item conception__item--dining">Замените один-два приема обычной еды на наше функциональное питание.</li>
+          <li class="conception__item conception__item--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+        </ol>
+      </div>
     </section>
-    <section></section>
+    <section class="real-case">
+      <div class="real-case__content">
+        <h2 class="real-case__title">Живой пример</h2>
+        <p class="real-case__description">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <ul class="real-case__indicators">
+          <li class="rel-case__item">5 кг</li>
+          <li class="rel-case__item">60 дней</li>
+        </ul>
+        <p class="real-case__expenses">Затраты на питание: 15 000 руб.</p>
+      </div>
+      <div class="slider real-case__slider">
+        <div class="slider__wrapper">
+          <ul class="slider__list">
+            <li class="slider__item slider__item--active">
+              <picture class="slider__image-container">
+                <source media="(min-width: )" srcset="">
+                <source media="(min-width: )" srcset="">
+                <img src="http://placehold.it/150x100" alt="Кот до похудения" class="slider__image">
+              </picture>
+            </li>
+            <li class="slider__item">
+              <picture class="slider__image-container">
+                <source media="(min-width: )" srcset="">
+                <source media="(min-width: )" srcset="">
+                <img src="http://placehold.it/150x100" alt="Кот после похудения" class="slider__image">
+              </picture>
+            </li>
+          </ul>
+          <div class="slider__controls">
+
+          </div>
+        </div>
+      </div>
+    </section>
     <section></section>
   </main>
   <footer></footer>
