--- a/source/index.html
+++ b/source/index.html
@@ -110,7 +110,13 @@
             </li>
           </ul>
           <div class="slider__controls">
-
+            <button class="slider__button">Было</button>
+            <div class="slider__tumbler-container">
+              <span class="slider__tumbler">
+                <span class="visually-hidden">tumbler</span>
+              </span>
+            </div>
+            <button class="slider__button">Стало</button>
           </div>
         </div>
       </div>
