index.html markup done

--- a/source/index.html
+++ b/source/index.html
@@ -121,8 +121,59 @@
         </div>
       </div>
     </section>
-    <section></section>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <section class="contacts footer__contacts">
+      <h2 class="visually-hidden">Наши контакты</h2>
+      <div class="contacts__wrapper">
+        <div class="contacts__content">
+          <p class="contacts__appeal">
+            Приглашаем к сотрудничеству дилеров!
+          </p>
+          <p class="contacts__address">
+            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          </p>
+        </div>
+        <iframe class="contacts__map" src="#" frameborder="0">
+          Ваш браузер не поддерживате плавающие фреймы...
+        </iframe>
+      </div>
+    </section>
+    <div class="footer__wrapper">
+      <section class="footer__logo">
+        <h2 class="visually-hidden">Логотип Cat Energy</h2>
+        <a href="" class="footer__logo-link">
+          <img src="http://placehold.it/150x100" alt="Cat Energy Logo" class="footer__logo-image">
+        </a>
+      </section>
+      <section class="social footer__social">
+        <h2 class="visually-hidden">Социальный сети</h2>
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="#" class="social__link social__link--vk">
+              <span class="visually-hidden">ВКонтакте</span>
+              <img src="#" alt="VK icon" class="social__image">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--instagramm">
+              <span class="visually-hidden">Инстаграмм</span>
+              <img src="#" alt="instagramm icon" class="social__image">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--facebook">
+              <span class="visually-hidden">Фейсбук</span>
+              <img src="#" alt="facebook icon" class="social__image">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="copyright footer__copyright">
+        <span class="copyright__name">HTML Academy</span>
+        <img src="http://placehold.it/150x100" alt="HTML Academy logo" class="copyright__image">
+      </section>
+    </div>
+  </footer>
 </body>
 </html>
