link added to button

--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,9 @@
           <source media="(min-width: )" srcset="">
           <img src="http://placehold.it/150x100" alt="фото товара" class="offer__image">
         </picture>
-        <button class="button offer__button" type="button">Подобрать программу</button>
+        <a href="#" class="offer__link">
+          <button class="button offer__button" type="button">Подобрать программу</button>
+        </a>
       </div>
     </section>
     <section class="catalogues">
