typos in index.html fixed

--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
       </nav>
     </div>
   </header>
-  <main">
+  <main>
     <section class="offer">
       <div class="offer__wrapper">
         <h1 class="offer__title">Функциональное питание для котов</h1>
