typos and validator errors fixed

--- a/source/form.html
+++ b/source/form.html
@@ -21,13 +21,13 @@
         </button>
         <ul class="navigation__list">
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link navigation__link--active">Главная</a>
+            <a class="navigation__link navigation__link--active" href="#">Главная</a>
           </li>
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Каталог продукции</a>
+            <a class="navigation__link" href="#">Каталог продукции</a>
           </li>
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Подбор программы</a>
+            <a class="navigation__link" href="#">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -42,15 +42,15 @@
           <legend class="visually-hidden">Данные о Вашем питомце</legend>
           <ul class="cat-data__list">
             <li class="cat-data__item">
-              <label class="required" for="cat-data__name">Имя:</label>
+              <label class="cat-data__label required" for="cat-data__name">Имя:</label>
               <input class="cat-data__name" type="text" name="cat-name" id="cat-data__name" placeholder="Барсик" required>
             </li>
             <li class="cat-data__item">
-              <label class="required" for="cat-data__weight">Вес (кг):</label>
-              <input class="cat-data-weight" type="number" name="cat-weight" id="cat-data__weight" value="7" required>
+              <label class="cat-data__label required" for="cat-data__weight">Вес (кг):</label>
+              <input class="cat-data__weight" type="number" name="cat-weight" id="cat-data__weight" value="7" required>
             </li>
             <li class="cat-data__item">
-              <label for="cat-data__age">Возраст (лет):</label>
+              <label class="cat-data__label" for="cat-data__age">Возраст (лет):</label>
               <input class="cat-data__age" type="number" name="cat-age" id="cat-data__age" value="7">
             </li>
           </ul>
@@ -60,17 +60,15 @@
           <ul class="programm-data__list">
             <li class="programm-data__item">
               <input class="programm-data__slim" type="radio" name="programm-data-slim" id="programm-data__slim" value="programm-slim" checked>
-              <label for="programm-data__slim">Похудение</label>
+              <label class="programm-data__lable" for="programm-data__slim">Похудение</label>
             </li>
             <li class="programm-data__item">
               <input class="programm-data__pro" type="radio" name="programm-data-pro" id="programm-data__pro" value="programm-pro">
-              <label for="programm-data__pro">Набор массы</label>
+              <label class="programm-data__lable" for="programm-data__pro">Набор массы</label>
             </li>
             <li class="programm-data__item">
-              <li class="programm-data__item">
-                <input class="programm-data__advice" type="radio" name="programm-data-advice" id="programm-data__advice" value="programm-advice">
-                <label for="programm-data__advice">Не знаю (нужен ваш совет)</label>
-              </li>
+              <input class="programm-data__advice" type="radio" name="programm-data-advice" id="programm-data__advice" value="programm-advice">
+              <label class="programm-data__lable" for="programm-data__advice">Не знаю (нужен ваш совет)</label>
             </li>
           </ul>
         </fieldset>
@@ -78,12 +76,12 @@
           <legend class="cat-owner-data__title">Контактные данные (владельца кота)</legend>
           <ul class="cat-owner-data__list">
             <li class="cat-owner-data__item">
-              <label class="required" for="cat-owner-data__email">E-mail:</label>
+              <label class="cat-owner-data__lable required" for="cat-owner-data__email">E-mail:</label>
               <input class="cat-owner-data__email" type="email" name="owner-email" id="cat-owner-data__email" placeholder="kuklachev@gmail.com" required>
             </li>
             <li class="cat-owner-data__item">
-              <label class="required" for="cat-owner-data__tel">Телефон:</label>
-              <input class="cat-owner-data__tel" type="tel" name="cat-owner-tel" id="cat-owner-data__tel" placeholder="8 (960) 900-60-90" required>
+              <label class="cat-owner-data__lable required" for="cat-owner-data__tel">Телефон:</label>
+              <input class="cat-owner-data__tel" type="tel" name="owner-tel" id="cat-owner-data__tel" placeholder="8 (960) 900-60-90" required>
             </li>
           </ul>
         </fieldset>
@@ -97,19 +95,19 @@
           <ul class="additions__list">
             <li class="additions__item">
               <input class="additions__sweetener" type="checkbox" name="sweetener" id="additions__sweetener" value="sweetener" checked>
-              <label for="additions__sweetener">Сахарозаменитель</label>
+              <label class="additions__lable" for="additions__sweetener">Сахарозаменитель</label>
             </li>
             <li class="additions__item">
               <input class="additions__water" type="checkbox" name="water" id="additions__water" value="water">
-              <label for="additions__water">Питьевая вода</label>
+              <label class="additions__lable" for="additions__water">Питьевая вода</label>
             </li>
             <li class="additions__item">
               <input class="additions__milk" type="checkbox" name="milk" id="additions__milk" value="milk">
-              <label for="additions__milk">Молоко</label>
+              <label class="additions__lable" for="additions__milk">Молоко</label>
             </li>
             <li class="additions__item">
               <input class="additions__vitamins" type="checkbox" name="vitamins" id="additions__vitamins" value="vitamins">
-              <label for="additions__vitamins">Витамины</label>
+              <label class="additions__lable" for="additions__vitamins">Витамины</label>
             </li>
           </ul>
         </fieldset>
@@ -132,44 +130,43 @@
             ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
           </p>
         </div>
-        <iframe class="contacts__map" src="#" frameborder="0">
-          Ваш браузер не поддерживате плавающие фреймы...
-        </iframe>
+        <iframe class="contacts__map" src="#" frameborder="0"></iframe>
       </div>
     </section>
     <div class="footer__wrapper">
       <section class="footer__logo">
         <h2 class="visually-hidden">Логотип Cat Energy</h2>
-        <a href="" class="footer__logo-link">
-          <img src="http://placehold.it/150x100" alt="Cat Energy Logo" class="footer__logo-image">
+        <a class="footer__logo-link" href="">
+          <img class="footer__logo-image" src="http://placehold.it/150x100" alt="Cat Energy Logo">
         </a>
       </section>
       <section class="social footer__social">
         <h2 class="visually-hidden">Социальный сети</h2>
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="social__link social__link--vk">
+            <a class="social__link social__link--vk" href="#">
               <span class="visually-hidden">ВКонтакте</span>
-              <img src="#" alt="VK icon" class="social__image">
+              <img class="social__image" src="#" alt="VK icon">
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--instagramm">
+            <a class="social__link social__link--instagramm" href="#">
               <span class="visually-hidden">Инстаграмм</span>
-              <img src="#" alt="instagramm icon" class="social__image">
+              <img class="social__image" src="#" alt="instagramm icon">
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">
+            <a class="social__link social__link--facebook" href="#">
               <span class="visually-hidden">Фейсбук</span>
-              <img src="#" alt="facebook icon" class="social__image">
+              <img class="social__image" src="#" alt="facebook icon">
             </a>
           </li>
         </ul>
       </section>
       <section class="copyright footer__copyright">
+        <h2 class="visually-hidden">Copyright</h2>
         <span class="copyright__name">HTML Academy</span>
-        <img src="http://placehold.it/150x100" alt="HTML Academy logo" class="copyright__image">
+        <img class="copyright__image" src="http://placehold.it/150x100" alt="HTML Academy logo">
       </section>
     </div>
   </footer>
