--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,13 +21,13 @@
         </button>
         <ul class="navigation__list">
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link navigation__link--active">Главная</a>
+            <a class="navigation__link navigation__link--active" href="#">Главная</a>
           </li>
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Каталог продукции</a>
+            <a class="navigation__link" href="#">Каталог продукции</a>
           </li>
           <li class="navigation__list-item">
-            <a href="#" class="navigation__link">Подбор программы</a>
+            <a class="navigation__link" href="#">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -236,7 +236,7 @@
               <span class="additional-product__volume">1 упаковка (100 г)</span>
               <span class="additional-product__price">100 р.</span>
             </p>
-            <button class="button additional-product__arder-button">Заказать</button>
+            <button class="button additional-product__order-button">Заказать</button>
           </li>
           <li class="additional-product additional-goods__item">
             <h3 class="additional-product__title">Питьевая вода</h3>
@@ -244,7 +244,7 @@
               <span class="additional-product__volume">5 литров</span>
               <span class="additional-product__price">50 р.</span>
             </p>
-            <button class="button additional-product__arder-button">Заказать</button>
+            <button class="button additional-product__order-button">Заказать</button>
           </li>
           <li class="additional-product additional-goods__item">
             <h3 class="additional-product__title">Молоко</h3>
@@ -252,7 +252,7 @@
               <span class="additional-product__volume">1 литр</span>
               <span class="additional-product__price">100 р.</span>
             </p>
-            <button class="button additional-product__arder-button">Заказать</button>
+            <button class="button additional-product__order-button">Заказать</button>
           </li>
           <li class="additional-product additional-goods__item">
             <h3 class="additional-product__title">Витамины</h3>
@@ -260,7 +260,7 @@
               <span class="additional-product__volume">1 упаковка (30 г)</span>
               <span class="additional-product__price">300 р.</span>
             </p>
-            <button class="button additional-product__arder-button">Заказать</button>
+            <button class="button additional-product__order-button">Заказать</button>
           </li>
         </ul>
       </section>
@@ -283,44 +283,43 @@
             ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
           </p>
         </div>
-        <iframe class="contacts__map" src="#" frameborder="0">
-          Ваш браузер не поддерживате плавающие фреймы...
-        </iframe>
+        <iframe class="contacts__map" src="#" frameborder="0"></iframe>
       </div>
     </section>
     <div class="footer__wrapper">
       <section class="footer__logo">
         <h2 class="visually-hidden">Логотип Cat Energy</h2>
-        <a href="" class="footer__logo-link">
-          <img src="http://placehold.it/150x100" alt="Cat Energy Logo" class="footer__logo-image">
+        <a class="footer__logo-link" href="">
+          <img class="footer__logo-image" src="http://placehold.it/150x100" alt="Cat Energy Logo">
         </a>
       </section>
       <section class="social footer__social">
         <h2 class="visually-hidden">Социальный сети</h2>
         <ul class="social__list">
           <li class="social__item">
-            <a href="#" class="social__link social__link--vk">
+            <a class="social__link social__link--vk" href="#">
               <span class="visually-hidden">ВКонтакте</span>
-              <img src="#" alt="VK icon" class="social__image">
+              <img class="social__image" src="#" alt="VK icon">
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--instagramm">
+            <a class="social__link social__link--instagramm" href="#">
               <span class="visually-hidden">Инстаграмм</span>
-              <img src="#" alt="instagramm icon" class="social__image">
+              <img class="social__image" src="#" alt="instagramm icon">
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">
+            <a class="social__link social__link--facebook" href="#">
               <span class="visually-hidden">Фейсбук</span>
-              <img src="#" alt="facebook icon" class="social__image">
+              <img class="social__image" src="#" alt="facebook icon">
             </a>
           </li>
         </ul>
       </section>
       <section class="copyright footer__copyright">
+        <h2 class="visually-hidden">Copyright</h2>
         <span class="copyright__name">HTML Academy</span>
-        <img src="http://placehold.it/150x100" alt="HTML Academy logo" class="copyright__image">
+        <img class="copyright__image" src="http://placehold.it/150x100" alt="HTML Academy logo">
       </section>
     </div>
   </footer>
