some styles added to header

--- a/source/index.html
+++ b/source/index.html
@@ -14,14 +14,14 @@
         <picture class="logo__container">
           <source media="(min-width: )" srcset="">
           <source media="(min-width: )" srcset="">
-          <img class="logo__image" src="http://placehold.it/150x100" alt="Cat Energy Logo">
+          <img class="logo__image" src="./img/icon-logo-mobile.svg" width="33" height="38" alt="Cat Energy Logo">
         </picture>
       </a>
       <nav class="navigation header__navigation">
         <button class="navigation__toggle-button" type="button">
           <span class="visually-hidden">Меню</span>
         </button>
-        <ul class="navigation__list">
+        <ul class="navigation__list navigation__list--closed">
           <li class="navigation__list-item">
             <a class="navigation__link navigation__link--active" href="#">Главная</a>
           </li>
