fonts and header styles added

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Каталог товаров Cat Energy</title>
+  <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -30,6 +31,7 @@
           </li>
         </ul>
       </nav>
+    </div>
   </header>
   <main class="catalog">
     <div class="catalog__wrapper">
@@ -161,7 +163,7 @@
               Показать еще 100500 товаров
             </p>
             <p class="suggestion-more__slogan">
-              На самом деле вкусов гораздо больше!
+              На&nbsp;самом деле вкусов гораздо больше!
             </p>
             <button class="button suggestion-more__button" type="button">
               Показать все
