--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Cat Energy</title>
+  <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
         </picture>
       </a>
       <nav class="navigation header__navigation">
-        <button class="navigation__toggle-button" type="button" aria-label="меню"></button>
+        <button class="navigation__toggle-button navigation__toggle-button--menu-open" type="button" aria-label="меню"></button>
         <ul class="navigation__list navigation__list--closed">
           <li class="navigation__list-item">
             <a class="navigation__link navigation__link--active" href="#">Главная</a>
@@ -119,9 +120,7 @@
           <div class="slider__controls">
             <button class="slider__button" type="button">Было</button>
             <div class="slider__tumbler-container">
-              <span class="slider__tumbler">
-                <span class="visually-hidden">tumbler</span>
-              </span>
+              <span class="slider__tumbler" aria-label="tumbler"></span>
             </div>
             <button class="slider__button" type="button">Стало</button>
           </div>
